@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.26 2003/08/09 10:32:13 seb Exp $
+# $NetBSD: Makefile,v 1.27 2004/01/28 12:21:54 xtraeme Exp $
 #
 
 DISTNAME=	dinotrace-9.1k
+PKGREVISION=	1
 CATEGORIES=	cad
 MASTER_SITES=	http://www.veripool.com/ftp/
 
@@ -10,7 +11,7 @@ HOMEPAGE= 	http://www.veripool.com/dinotrace/
 COMMENT=	Tool for viewing the output of digital simulators
 
 USE_BUILDLINK2=		YES
-USE_X11BASE=		YES
+USE_X11=		YES
 GNU_CONFIGURE=		YES
 USE_PERL5=		build
 INFO_FILES=		dinotrace.info
