@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.4623 2004/01/28 12:14:16 xtraeme Exp $
+$NetBSD: CHANGES,v 1.4624 2004/01/28 12:23:18 xtraeme Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -509,3 +509,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated mutt to 1.4.1nb4 [lukem 2004-01-28]
 	Updated tla to 1.1 [recht 2004-01-28]
 	Updated nedit to 5.4nb1 [xtraeme 2004-01-28]
+	Updated dinotrace to 9.1knb1 [xtraeme 2004-01-28]
